First cut of content plugin.